Fix dropdown visibility on week view

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -2127,6 +2127,14 @@
         }
     }
 
+    .dx-scheduler-dropdown-appointments-compact {
+        .dx-scheduler-dropdown-appointments-content {
+            span:last-child {
+                padding-left: 0;
+            }
+        }
+    }
+    
     .dx-scheduler-dropdown-appointment {
         border-left: 5px solid @SCHEDULER_APPOINTMENT_BASE_COLOR;
     }
